shared/fmod/headers/fmod_event_net.h

FMOD_RESULT FMOD_NetEventSystem_Init       (FMOD_EVENTSYSTEM *eventsystem, unsigned short port);
FMOD_RESULT FMOD_NetEventSystem_Update     ();
FMOD_RESULT FMOD_NetEventSystem_Shutdown   ();
FMOD_RESULT FMOD_NetEventSystem_GetVersion (unsigned int *version);