shared/fmod/fmod.odin


    @(link_name="FMOD_EventQueueEntry_GetInterrupt")
    FMOD_EventQueueEntry_GetInterrupt :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, interrupt : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_EventQueueEntry_SetCrossfadeTime")
    FMOD_EventQueueEntry_SetCrossfadeTime :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, crossfade : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_EventQueueEntry_GetCrossfadeTime")
    FMOD_EventQueueEntry_GetCrossfadeTime :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, crossfade : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_EventQueueEntry_SetUserData")
    FMOD_EventQueueEntry_SetUserData :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_EventQueueEntry_GetUserData")
    FMOD_EventQueueEntry_GetUserData :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, userdata : ^rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_EventQueueEntry_GetMemoryInfo")
    FMOD_EventQueueEntry_GetMemoryInfo :: proc(eventqueueentry : ^FMOD_EVENTQUEUEENTRY, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_Reset")
    FMOD_MusicSystem_Reset :: proc(musicsystem : ^FMOD_MUSICSYSTEM) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetVolume")
    FMOD_MusicSystem_SetVolume :: proc(musicsystem : ^FMOD_MUSICSYSTEM, volume : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetVolume")
    FMOD_MusicSystem_GetVolume :: proc(musicsystem : ^FMOD_MUSICSYSTEM, volume : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetReverbProperties")
    FMOD_MusicSystem_SetReverbProperties :: proc(musicsystem : ^FMOD_MUSICSYSTEM, props : ^FMOD_REVERB_CHANNELPROPERTIES) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetReverbProperties")
    FMOD_MusicSystem_GetReverbProperties :: proc(musicsystem : ^FMOD_MUSICSYSTEM, props : ^FMOD_REVERB_CHANNELPROPERTIES) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetPaused")
    FMOD_MusicSystem_SetPaused :: proc(musicsystem : ^FMOD_MUSICSYSTEM, paused : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetPaused")
    FMOD_MusicSystem_GetPaused :: proc(musicsystem : ^FMOD_MUSICSYSTEM, paused : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetMute")
    FMOD_MusicSystem_SetMute :: proc(musicsystem : ^FMOD_MUSICSYSTEM, mute : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetMute")
    FMOD_MusicSystem_GetMute :: proc(musicsystem : ^FMOD_MUSICSYSTEM, mute : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetInfo")
    FMOD_MusicSystem_GetInfo :: proc(musicsystem : ^FMOD_MUSICSYSTEM, info : ^FMOD_MUSIC_INFO) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_PromptCue")
    FMOD_MusicSystem_PromptCue :: proc(musicsystem : ^FMOD_MUSICSYSTEM, id : _c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_PrepareCue")
    FMOD_MusicSystem_PrepareCue :: proc(musicsystem : ^FMOD_MUSICSYSTEM, id : _c.uint, prompt : ^^FMOD_MUSICPROMPT) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetParameterValue")
    FMOD_MusicSystem_GetParameterValue :: proc(musicsystem : ^FMOD_MUSICSYSTEM, id : _c.uint, parameter : ^_c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetParameterValue")
    FMOD_MusicSystem_SetParameterValue :: proc(musicsystem : ^FMOD_MUSICSYSTEM, id : _c.uint, parameter : _c.float) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetCues")
    FMOD_MusicSystem_GetCues :: proc(musicsystem : ^FMOD_MUSICSYSTEM, it : ^FMOD_MUSIC_ITERATOR, filter : cstring) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetNextCue")
    FMOD_MusicSystem_GetNextCue :: proc(musicsystem : ^FMOD_MUSICSYSTEM, it : ^FMOD_MUSIC_ITERATOR) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetParameters")
    FMOD_MusicSystem_GetParameters :: proc(musicsystem : ^FMOD_MUSICSYSTEM, it : ^FMOD_MUSIC_ITERATOR, filter : cstring) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetNextParameter")
    FMOD_MusicSystem_GetNextParameter :: proc(musicsystem : ^FMOD_MUSICSYSTEM, it : ^FMOD_MUSIC_ITERATOR) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_LoadSoundData")
    FMOD_MusicSystem_LoadSoundData :: proc(musicsystem : ^FMOD_MUSICSYSTEM, resource : FMOD_EVENT_RESOURCE, mode : _c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_FreeSoundData")
    FMOD_MusicSystem_FreeSoundData :: proc(musicsystem : ^FMOD_MUSICSYSTEM, waituntilready : _c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_SetCallback")
    FMOD_MusicSystem_SetCallback :: proc(musicsystem : ^FMOD_MUSICSYSTEM, callback : FMOD_MUSIC_CALLBACK, userdata : rawptr) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicSystem_GetMemoryInfo")
    FMOD_MusicSystem_GetMemoryInfo :: proc(musicsystem : ^FMOD_MUSICSYSTEM, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicPrompt_Release")
    FMOD_MusicPrompt_Release :: proc(musicprompt : ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicPrompt_Begin")
    FMOD_MusicPrompt_Begin :: proc(musicprompt : ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicPrompt_End")
    FMOD_MusicPrompt_End :: proc(musicprompt : ^FMOD_MUSICPROMPT) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicPrompt_IsActive")
    FMOD_MusicPrompt_IsActive :: proc(musicprompt : ^FMOD_MUSICPROMPT, active : ^_c.int) -> FMOD_RESULT ---

    @(link_name="FMOD_MusicPrompt_GetMemoryInfo")
    FMOD_MusicPrompt_GetMemoryInfo :: proc(musicprompt : ^FMOD_MUSICPROMPT, memorybits : _c.uint, event_memorybits : _c.uint, memoryused : ^_c.uint, memoryused_details : ^FMOD_MEMORY_USAGE_DETAILS) -> FMOD_RESULT ---

    @(link_name="FMOD_NetEventSystem_Init")
    FMOD_NetEventSystem_Init :: proc(eventsystem : ^FMOD_EVENTSYSTEM, port : _c.ushort) -> FMOD_RESULT ---

    @(link_name="FMOD_NetEventSystem_Update")
    FMOD_NetEventSystem_Update :: proc() -> FMOD_RESULT ---

    @(link_name="FMOD_NetEventSystem_Shutdown")
    FMOD_NetEventSystem_Shutdown :: proc() -> FMOD_RESULT ---

    @(link_name="FMOD_NetEventSystem_GetVersion")
    FMOD_NetEventSystem_GetVersion :: proc(version : ^_c.uint) -> FMOD_RESULT ---

    @(link_name="FMOD_ErrorString")
    FMOD_ErrorString :: proc(errcode : FMOD_RESULT) -> cstring ---

}
